--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
   <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, cupiditate!</h1>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore iure nobis atque, perspiciatis temporibus similique sint, necessitatibus mollitia eligendi velit accusamus iste! Quia, molestias error labore soluta officiis veritatis illum?</p>
+  <ul>
+    <li>Home</li>
+    <li>About us</li>
+    <li>Contact us</li>
+  </ul>
 </body>
 </html>
